[package]
name = "car-bb-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
regex = "1.11.1"
rocket = {version = "0.5.1", features = ["json"]}
rusqlite = "0.36.0"
serde = "1.0.219"



#[dependencies.rocket]
#rocket = "0.5.1"
#features = ["json"]
